--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h4>Best Cakes in Colombo</h4>
     <h1>Tasty Cakes Sri Lanka</h1>
     
-    <img src="https://i.ibb.co/yQ9qYBk/image-01.png" width=320px alt="Image of a Cake">
+    <img src="image-01.png" width=320px alt="Cake picture">
     <h2 class="tagline"> same day delivery - order before 4pm </h2>
   </div>
 
