--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
     <h4>Best Cakes in Colombo</h4>
     <h1>Tasty Cakes Sri Lanka</h1>
     
-    <img src="image-01.png" width=320px alt="Cake picture">
     <h2 class="tagline"> same day delivery - order before 4pm </h2>
+    <p>We are selling cakes, bakery items and lunch. Enjoy the best Brownies and Drinks at
+        <strong style="color:Brown">The Tasty Cakes.</strong> Browse our collection and order your favorite now.
+      </p>
+    
+    <img src="image-01.png" width=320px alt="Cake picture">
+   
   </div>
 
-  <p>We are selling cakes, bakery items and lunch. Enjoy the best Brownies and Drinks at
-    <strong style="color:Brown">The Tasty Cakes.</strong> Browse our collection and order your favorite now.
-  </p>
-
+ 
   <br/>
   <p class="pricetopic">Price List</p>
-  <table class="pricelist">
+  <table>
     <tr>
       <th>Item</th>
       <th>Price</th>
